test/tests/compiler/18_structures/invalid_parse/plx1_struct_member_storage_class_2.plx
type struc s1(x: i32, pub y: i32)
